# PTalk

./: CMakeLists.txt  conanfile.txt
code/: CMakeLists.txt
code/include/mainframe/ptalk/: client.h  server.h
code/src/: client.cpp  server.cpp
code/tests/pingpong/: CMakeLists.txt
